# YafRay

./: AUTHORS  ChangeLog  INSTALL  LICENSE  README  README.md  SConstruct  conf.doxygen  configio.py  darwin-settings.py  globalinfo.py  linux-settings.py  sunos5-settings.py  win32-settings.py
debian/: README.Debian  changelog  conffiles.ex  control  copyright  ex.package.doc-base  files  manpage.1.ex  manpage.sgml.ex  menu.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  rules  watch.ex  yafray.postinst.debhelper  yafray.prerm.debhelper  yafray.substvars
doc/: doc.html  modelo_noname.dia
osxpak/: yafray.info  yafraydes.plist
osxpak/Resources/: License.rtf  ReadMe.rtf  Welcome.rtf
src/: Makefile.am  SConscript  gram.yafray
src/backgrounds/: Makefile.am  SConscript  hdri.cc  hdri.h  shaderback.cc  shaderback.h  sunsky.cc  sunsky.h
src/interface/: Makefile.am  SConscript  external.cc  external.h  interface.h  interface_impl.cc  interface_impl.h  test.cc
src/lights/: Makefile.am  SConscript  arealight.cc  arealight.h  cacheproxy.cc  cacheproxy.h  globalphotonlight.cc  globalphotonlight.h  hemilight.cc  hemilight.h  lightcache.cc  lightcache.h  pathlight.cc  pathlight.h  pathtools.cc  pathtools.h  photonlight.cc  photonlight.h  pointlight.cc  pointlight.h  softlight.cc  softlight.h  spherelight.cc  spherelight.h  spotlight.cc  spotlight.h  sunlight.cc  sunlight.h
src/loader/: Makefile.am  gram  gram_lex.cc  gram_lex.h  gram_loader.cc  gram_loader.h  lex.h  loader.cc  mlex.cc  mlex.h  msin.h  msin_general.cc  msin_object.cc  msin_render.cc  msin_shader.cc  parser.h  render.cc  render.h  wingetopt.cc  winunistd.h
src/shaders/: Makefile.am  SConscript  basicblocks.cc  basicblocks.h  basicshaders.cc  basicshaders.h  basictex.cc  basictex.h  bbreg.cc  blendershader.cc  blendershader.h  brdf.cc  brdf.h  imagebackg.cc  imagebackg.h  jpeg.cc  mixblocks.cc  mixblocks.h  sss.cc  sss.h
src/yafraycore/: EXR_io.cc  EXR_io.h  HDR_io.cc  HDR_io.h  Makefile.am  SConscript  background.cc  background.h  bound.cc  bound.h  buffer.cc  buffer.h  camera.cc  camera.h  ccthreads.cc  ccthreads.h  color.cc  color.h  filter.cc  filter.h  forkedscene.cc  forkedscene.h  geometree.h  hash3d.h  ipc.cc  ipc.h  jobdealer.h  kdtree.cc  kdtree.h  light.h  matrix4.cc  matrix4.h  mcqmc.h  mesh.cc  mesh.h  metashader.cc  metashader.h  noise.cc  noise.h  object3d.cc  (+38 more)
win32pak/: License.txt  README.txt  yafray_win_iss.tmpl
